j11 collection creation refactorings