@@ -28,7 +28,6 @@ import password.pwm.util.cli.MainClass;
 
 import java.io.InputStreamReader;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -174,7 +173,7 @@ public class ShellCommand extends AbstractCliCommand
         {
             return Collections.emptyList();
         }
-        return Collections.unmodifiableList( Arrays.asList( input.trim().split( "\\s+" ) ) );
+        return List.of( input.trim().split( "\\s+" ) );
     }
 
 }
